Fixed the relationship between Analyzer Interface and the MafiaGame object
Changed when the MafiaGame object is initialized and used. Also added more ideas to the README.

--- a/conf/save0-def.conf
+++ b/conf/save0-def.conf
@@ -1,4 +1,4 @@
-TownGovt=>Mayor,Marshall,Crier,Citizen,MasonLeader,Mason
+TownGovernment=>Mayor,Marshall,Crier,Citizen,MasonLeader,Mason
 TownProtective=>Doctor,Bodyguard,BusDriver,Escort
 TownInvestigative=>Investigator,Sheriff,Detective,Coroner
 TownPower=>BusDriver,Veteran,Spy,Jailor
