Implemented more functionality
Committing some recent updates, e.g. the game can now print updated role lists, claims, etc. Also fixed spelling errors that hindered execution.

--- a/saves/save900.conf
+++ b/saves/save900.conf
@@ -1,16 +1,16 @@
 15
+MasonLeader
+TownGovernment
 TownGovernment
 TownInvestigative
 TownInvestigative
 TownProtective
 TownProtective
 TownKilling
-TownPower
 TownRandom
 TownRandom
 NeutralBenign
-NeutralEvil
-NeutralRandom
-Godfather
-MafiaSupport
-MafiaDeception
+MassMurderer
+Arsonist
+Cultist
+Cultist
